# replace_last_backslash

./: .gitignore  README.md  pyproject.toml
replace_last_backslash/: __init__.py  replace_last_backslash.py
tests/: test_replace_last_backslash.py
