[tool.poetry]
name = "replace-last-backslash"
version = "0.1.0"
description = ""
authors = ["philiporlando <phlp.orlando@gmail.com>"]
readme = "README.md"
packages = [{include = "replace_last_backslash"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
